@@ -102,6 +102,8 @@ NEW FEATURES
      equivalent to `DT[, "x", with=FALSE]` instead of ending up with an error. Thanks to tresbot for reporting 
 	 on SO: http://stackoverflow.com/questions/18525976/converting-multiple-data-table-columns-to-factors-in-r
 
+  o  `format.data.table` now understands "formula" and displays embedded formulas as expected, FR #2591.
+
 BUG FIXES
 
   o  If fread returns a data error (such as unbalanced quotes on a particular line) it now
@@ -209,6 +211,14 @@ BUG FIXES
   o  #5005 - some function expressions were not being correctly evaluated in j-expression.
      Thanks to Tonny Petersen for reporting.
 
+  o  Fixed bug #5007, `j` did not see variables declared within a local (function) environment properly. Now, 
+     `DT[, lapply(.SD, function(x) fun_const), by=x]` where "fun_const" is a local variable within a function 
+     works as expected. Thanks to Ricardo Saporta for catching this and providing a very nice reproducible 
+     example
+
+  o  Fixed another case where function expressions were not constructed properly in `j`, while fixing #5007. 
+     `DT[, lapply(.SD, function(x) my_const), by=x]` now works as expected instead of ending up in an error.
+  
 NOTES
 
   o  If fread ignores colClasses, the message is upgraded to warning instead of just a line in verbose=TRUE mode.
@@ -299,7 +309,7 @@ NEW FEATURES
   o  New function address() returns the address in RAM of its argument. Sometimes useful in determining whether a value
      has been copied or not by R, programatically.
        http://stackoverflow.com/a/10913296/403310
-  
+
 BUG FIXES
 
   o  merge no longer returns spurious NA row(s) when y is empty and all.y=TRUE (or all=TRUE), #2633. Thanks
